force-app/main/default/objects/Company_Key__c/Company_Key__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant GRACE
2. ZRD
3. SF-50</description>
    <label>Konzernschlüssel</label>
    <nameField>
        <label>Company Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Konzernschlüssel</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>