force-app/main/default/objects/Company_Key__c/fields/Company_Group__c.field-meta.xml
<CustomField>
    <fullName>Company_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>1. Integration relevant - GRACE
2. ZRD
3. Relation to Company Group</description>
    <label>Company Group</label>
    <referenceTo>Company_Group__c</referenceTo>
    <relationshipLabel>Konzernschlüssel</relationshipLabel>
    <relationshipName>Konzernschl_ssel</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>