force-app/main/default/objects/Company_Key__c/fields/Company_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Key_ID__c</fullName>
    <description>1. Integration relevant - GRACE
2. ZRD.
3.</description>
    <externalId>true</externalId>
    <label>Company Key ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>