force-app/main/default/objects/Company_Key__c/fields/Current_User_is_AM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_AM__c</fullName>
    <description>1, Not integration relevant.
2. ZRD
3. SF-1067. Helper Field for List View Filters</description>
    <formula>IF(  Account_Manager__r.Id =  $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is AM</label>
    <type>Checkbox</type>
</CustomField>