force-app/main/default/objects/Company_Key__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>1. Integration relevant - GRACE
2. ZRD.
3.</description>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>