force-app/main/default/objects/Company_Key__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Key_ID__c</columns>
    <columns>Company_Group__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Konzernschlüssel</label>
</ListView>