force-app/main/default/objects/Company_Key__c/listViews/Meine_Konzernschl_ssel.listView-meta.xml
<ListView>
    <fullName>Meine_Konzernschl_ssel</fullName>
    <columns>NAME</columns>
    <columns>Company_Key_ID__c</columns>
    <columns>Company_Group__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_AM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meine Konzernschlüssel</label>
</ListView>